src/slurm-14193220.log
  File "main.py", line 223
    file_object = open(experiment_name'.txt', 'a')
                                      ^
SyntaxError: invalid syntax
